Revert "fix(test): avoid Map.of in offload policies test"
This reverts commit d56786e19b7854d2219c715c0e7006927a07c390.

(cherry picked from commit 14bdd2b2e330c811a7e4fed57b052e2466312deb)