@@ -29,7 +29,6 @@ import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
@@ -346,7 +345,7 @@ public class OffloadPoliciesTest {
 
         Assert.assertNotNull(offloadPolicies);
         assertEquals(offloadPolicies.getManagedLedgerExtraConfigurations(),
-                Collections.singletonMap("tieredStorageBucketPrefix", bucketPrefix));
+                Map.of("tieredStorageBucketPrefix", bucketPrefix));
     }
 
     @Test
@@ -363,7 +362,7 @@ public class OffloadPoliciesTest {
 
         Assert.assertNotNull(offloadPolicies);
         assertEquals(offloadPolicies.getManagedLedgerExtraConfigurations(),
-                Collections.singletonMap("tieredStorageBucketPrefix", "topic-prefix"));
+                Map.of("tieredStorageBucketPrefix", "topic-prefix"));
     }
 
     @Test
@@ -380,7 +379,7 @@ public class OffloadPoliciesTest {
 
         Assert.assertNotNull(offloadPolicies);
         assertEquals(offloadPolicies.getManagedLedgerExtraConfigurations(),
-                Collections.singletonMap("tieredStorageBucketPrefix", ""));
+                Map.of("tieredStorageBucketPrefix", ""));
     }
 
 
